[hotfix] Fix dark mode map popup

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,4 +1,35 @@
 .map {
-    width: 100%;
-    height: 70vh
+  width: 100%;
+  height: 70vh;
+}
+
+.maplibregl-popup-content ul {
+  padding-left: 15px;
+}
+/* fix popup in dark mode */
+@media screen and (prefers-color-scheme: dark) {
+  .maplibregl-popup-content,
+  .maplibregl-popup-close-button {
+    color: var(--white-color);
+
+    a {
+      color: var(--warning-color);
+    }
+  }
+
+  .maplibregl-popup-content {
+    background-color: var(--dark-blue-gray-color);
+    border: 1px solid var(--white-color);
+    color: #fff;
+  }
+
+  .maplibregl-popup-tip {
+    border-top-color: var(--dark-blue-gray-color);
+  }
+
+  .maplibregl-popup-content button {
+    background-color: var(--dark-blue-gray-color);
+    border-color: var(--white-color);
+    color: var(--warning-color);
+  }
 }
